# app/JsonApi/V1/Users/UserRequest.php
@@ -31,19 +31,14 @@ class UserRequest extends ResourceRequest
             ],
             'first_name' => ['required', 'max:50'],
             'last_name' => ['required', 'max:50'],
-            'phone' => ['required', 'string', 'min:10', 'max:20'],
-            'address' => ['required', 'string', 'max:150'],
-            'city' => ['required', 'string', 'max:100'],
-            'country' => ['required', 'string', 'max:100'],
-            'postal_code' => ['nullable', 'string', 'max:25'],
             'birthdate' => [
                 'required',
                 'date',
-                'before_or_equal:' . $allowedBirthdate,
+                "before_or_equal:{$allowedBirthdate}",
             ],
             'password' => $this->passwordRules(),
+            'roles' => ['required', 'array', 'min:1'],
+            'roles.*' => ['string', 'exists:roles,name'],
         ];
-
     }
-
 }
