# app/Observers/UserObserver.php
@@ -27,7 +27,11 @@ class UserObserver
      */
     public function created(User $user): void
     {
-        //
+        $roles = request()->input('data.attributes.roles');
+
+        if(isset($roles)) {
+            $user->syncRoles($roles);
+        }
     }
 
     /**
